  Marshal.load and hence allows them to be stored in Rails sessions. 
  Closes #4240.
* Updated to tzdata version 2006g
  (http://article.gmane.org/gmane.comp.time.tz/1008).
* Country index data is now defined in a single module that is independent
  of the Country class implementation.
* Country instances can now be used with Marshal.dump and Marshal.load (#4240).


== Version 0.2.1 (tzdata v2006d) - 17-Apr-2006

* Fix a performance issue caused in 0.2.0 with Timezone.local_to_utc. 
  Conversions performed on TimeOrDateTime instances passed to <=> are now
  cached as originally intended. Thanks to Michael Smedberg for spotting this.
* Fix a performance issue with the local_to_utc period search algorithm 
  originally implemented in 0.1.0. The condition that was supposed to cause
  the search to terminate when enough periods had been found was only being
  evaluated in a small subset of cases. Thanks to Michael Smedberg and 
  Jamis Buck for reporting this.
* Added abbreviation as an alias for TimezonePeriod.zone_identifier.
* Updated to tzdata version 2006d
  (http://article.gmane.org/gmane.comp.time.tz/936).
* Ignore any offset in DateTimes passed in (as is already done for Times).
  All of the following now refer to the same UTC time (15:40 on 17 April 2006). 
  Previously, the DateTime in the second line would have been interpreted 
  as 20:40.
  
    tz.utc_to_local(DateTime.new(2006, 4, 17, 15, 40, 0))
    tz.utc_to_local(DateTime.new(2006, 4, 17, 15, 40, 0).new_offset(Rational(5, 24)))
    tz.utc_to_local(Time.utc(2006, 4, 17, 15, 40, 0))
    tz.utc_to_local(Time.local(2006, 4, 17, 15, 40, 0))


== Version 0.2.0 (tzdata v2006c) - 3-Apr-2006

* Use timestamps rather than DateTime objects in zone files for times between
  1970 and 2037 (the range of Time).
* Don't convert passed in Time objects to DateTime in most cases (provides 
  a substantial performance improvement).
* Allow integer timestamps (time in seconds since 1970-1-1) to be used as well 