@@ -10,6 +10,11 @@
 * Country index data is now defined in a single module that is independent
   of the Country class implementation.
 * Country instances can now be used with Marshal.dump and Marshal.load (#4240).
+* Country has a new zone_info method that returns CountryTimezone objects
+  containing additional information about each Timezone (latitude, longitude
+  and description).
+* Timezones within a Country are now returned in an order that makes 
+  geographic sense. 
 
 
 == Version 0.2.1 (tzdata v2006d) - 17-Apr-2006
